feat(application): add ListSession handler, Session Mapper & Session Resource
